--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* @import "custom.css"; */
 
 @import "../node_modules/ngf-bootstrap/dist/bootstrap.min.css";
+@import "../node_modules/ngx-toastr/toastr.css";
 
 .hoverwell:hover {
     background-color: #485563;
