--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -21,4 +21,22 @@
       </address>
     </div>
   </div>
+  <hr>
+  <div class="row">
+    <div class="col-md-6">
+      <p>Session(s)</p>
+    </div>
+    <div class="col-md-6">
+      <a (click)="addSessionMode()" class="float-right text-right">Add Session</a>
+    </div>
+
+  </div>
+  <br>
+  <div class="row" *ngIf="!isAddSessionMode">
+    <session-list [sessions]="event?.sessions"></session-list>
+  </div>
+  <div class="row" *ngIf="isAddSessionMode">
+    <create-session (saveNewSession)="saveNewSession($event)" (cancelNewSessionBtn)="cancelNewsesisonBtn()">
+    </create-session>
+  </div>
 </div>
