--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,22 +1,23 @@
 <div class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" >ngEvents</a>
+      <a class="navbar-brand">ngEvents</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
         <li>
-          <a [routerLink]="['/events']">All Events</a>
+          <a [routerLink]="['/events']" [routerLinkActiveOptions]="{exact:true}" routerLinkActive="active">All
+            Events</a>
         </li>
-        <li><a href="">Create Event</a></li>
+        <li><a [routerLink]="['events/new']" routerLinkActive="active">Create Event</a></li>
         <li class="dropdown">
-          <a class="dropdown-toggle" data-toggle="dropdown" >
+          <a class="dropdown-toggle" data-toggle="dropdown">
             Events
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu">
-            <li >
+            <li>
               <a href="">Angular Connect</a>
             </li>
           </ul>
@@ -25,15 +26,17 @@
       <div class="navbar-header navbar-right">
         <ul class="nav navbar-nav">
           <li>
-            <a>Welcome John</a>
+            <a *ngIf="!auth.isAuthenticated()" [routerLink]="['user/login']">Login</a>
+            <a *ngIf="auth.isAuthenticated()" [routerLink]="['/user/profile']" routerLinkActive="active">Welcome
+              {{auth.currentUser.lastName}}</a>
           </li>
         </ul>
       </div>
-      <form id="searchForm"  class="navbar-form navbar-right"  >
+      <form id="searchForm" class="navbar-form navbar-right">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search Sessions" >
+          <input type="text" class="form-control" placeholder="Search Sessions">
         </div>
-        <button class="btn btn-default" >
+        <button class="btn btn-default">
           Search
         </button>
       </form>
