--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -32,9 +32,11 @@
     </div>
 
     <!-- wrapp the nested fields with the location -->
-    <div ngModelGroup="location">
+    <div ngModelGroup="location" #locationGroup="ngModelGroup" validateLocation>
       <div class="form-group">
         <label for="address">Event Location:</label>
+        <em *ngIf="locationGroup?.invalid && locationGroup?.touched">You must enter atleast address or online
+          location</em>
         <input (ngModel)="newEvent.address" name="address" id="address" type="text" class="form-control"
           placeholder="Address of event..." />
       </div>
@@ -51,8 +53,8 @@
     </div>
     <div class="form-group">
       <label for="onlineUrl">Online Url:</label>
-      <input (ngModel)="newEvent.onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control"
-        placeholder="Online Url..." />
+      <input (change)="locationGroup.control.controls.address.updateValueAndValidity()" (ngModel)="newEvent.onlineUrl"
+        name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..." />
     </div>
     <div class="form-group"
       [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
@@ -67,8 +69,7 @@
       <img [src]="newEventForm.controls.imageUrl.value" *ngIf="newEventForm.controls.imageUrl?.valid" />
     </div>
 
-    <button type="submit" class="btn btn-primary">Save</button>
-    <button type="button" [disabled]="newEventForm.invalid" class="btn btn-default"
-      (click)="cancelEvent()">Cancel</button>
+    <button type="submit" [disabled]="newEventForm.invalid" class="btn btn-primary">Save</button>
+    <button type="button" class="btn btn-default" (click)="cancelEvent()">Cancel</button>
   </form>
 </div>
