--- a/src/app/event-details/event-details.component.html
+++ b/src/app/event-details/event-details.component.html
@@ -3,15 +3,15 @@
 
   <div class="row">
     <div class="col-md-11">
-      <h2>{{event?.name}} </h2>
+      <h2>{{event?.name | uppercase}} </h2>
     </div>
   </div>
 
   <div class="row">
     <div class="col-md-6">
-      <div><strong>Date:</strong> {{event?.date}}</div>
-      <div><strong>Time:</strong> {{event?.time}}</div>
-      <div><strong>Price:</strong> ${{event?.price}}</div>
+      <div><strong>Date:</strong> {{event?.date | date:'shortDate'}}</div>
+      <div><strong>Time:</strong> {{event?.time | duration}}</div>
+      <div><strong>Price:</strong> {{event?.price | currency:'INR'}}</div>
     </div>
     <div class="col-md-6">
       <address>
@@ -22,18 +22,37 @@
     </div>
   </div>
   <hr>
-  <div class="row">
-    <div class="col-md-6">
+  <div class="row" style="margin-bottom:5px;">
+    <div class="col-md-2">
       <p>Session(s)</p>
     </div>
-    <div class="col-md-6">
+    <div class="col-md-7">
+      Sort By:
+      <div class="btn-group btn-group-sm" style="margin-right:20px; margin-left:10px;">
+        <button class="btn btn-default" [class.active]="sortBy==='votes'" (click)="sortBy ='votes'">By
+          Votes</button>
+        <button class="btn btn-default" [class.active]="sortBy==='name'" (click)="sortBy ='name'">By Name</button>
+      </div>
+      <!-- &nbsp; &nbsp; -->
+      <div class="btn-group btn-group-sm">
+        <button class="btn btn-default" [class.active]="filterBy == 'all'" (click)="filterBy='all'">All</button>
+        <button class="btn btn-default" [class.active]="filterBy == 'beginner'"
+          (click)="filterBy='beginner'">Beginner</button>
+        <button class="btn btn-default" [class.active]="filterBy == 'intermediate'"
+          (click)="filterBy='intermediate'">Intermidiate</button>
+        <button class="btn btn-default" [class.active]="filterBy == 'advanced'"
+          (click)="filterBy='advanced'">Advanced</button>
+      </div>
+    </div>
+    <div class="col-md-3">
       <a (click)="addSessionMode()" class="float-right text-right">Add Session</a>
     </div>
 
   </div>
   <br>
   <div class="row" *ngIf="!isAddSessionMode">
-    <session-list [sessions]="event?.sessions"></session-list>
+    <session-list [eventId]="event?.id" [sortBy]="sortBy" [filterBy]="filterBy" [sessions]="event?.sessions">
+    </session-list>
   </div>
   <div class="row" *ngIf="isAddSessionMode">
     <create-session (saveNewSession)="saveNewSession($event)" (cancelNewSessionBtn)="cancelNewsesisonBtn()">
