--- a/src/app/session-list/session-list.component.html
+++ b/src/app/session-list/session-list.component.html
@@ -1,5 +1,9 @@
 <!-- <h4 *ngIf="sessions.length> 0">Program/Event Session(s)</h4> -->
-<div class="row" *ngFor="let session of sessions">
+<div class="row" *ngFor="let session of visibleSessions">
+  <div class="col-md-1" *ngIf="auth.isAuthenticated()">
+    <upvote (vote)="toggleVote(session)" [count]="session.voters.length" [voted]="userHasVoted(session)">
+    </upvote>
+  </div>
   <div class="col-md-10">
     <div class="well">
       <collapsable-session-well>
@@ -10,7 +14,7 @@
 
         <div well-session-body>
           <h6>{{session.presenter}}</h6>
-          <span>Duration: {{session.duration}}</span><br />
+          <span>Duration: {{session.duration | duration}}</span><br />
           <span>Level: {{session.level}}</span>
           <p>{{session.abstract}}</p>
         </div>
